Fixing function smooth scroll and fixing space between prices on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ ul {
 }
 
 .nav-bg.scrolled {
- background-image: linear-gradient(360deg, rgb(17, 16, 16), rgb(233, 71, 12));
+  background-image: linear-gradient(360deg, rgb(17, 16, 16), rgb(233, 71, 12));
 }
 
 .nav-link.scrolled {
@@ -185,33 +185,34 @@ ul {
 }
 
 .accordion {
-    background-color: transparent;
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    transition: .5s ease-out;
-    cursor: pointer;
+  background-color: transparent;
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  transition: 0.5s ease-out;
+  cursor: pointer;
 }
 
-.active, .accordion:hover {
-    color: rgb(255, 81, 0);
+.active,
+.accordion:hover {
+  color: rgb(255, 81, 0);
 }
 
-.accordion-panel{
-    margin-top: 10px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    margin-left: 20px;
+.accordion-panel {
+  margin-top: 10px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+  margin-left: 20px;
 }
 
 .accordion-panel p {
-    text-align: left;
-    font-size: 16px;
-    color: #fff;
-    padding: 0 25px;
+  text-align: left;
+  font-size: 16px;
+  color: #fff;
+  padding: 0 25px;
 }
 
 .who-can-play {
@@ -238,18 +239,18 @@ ul {
 .who-can-play-list p {
   font-size: 18px;
   letter-spacing: 1px;
-    text-align: center;
+  text-align: center;
 }
 
 .who-can-play p i {
-    font-size: 3rem;
-    transition: .5s ease-out;
-    cursor: pointer;
-    color: rgb(85, 85, 85);
+  font-size: 3rem;
+  transition: 0.5s ease-out;
+  cursor: pointer;
+  color: rgb(85, 85, 85);
 }
 
 .who-can-play p i:hover {
-    color: rgb(255, 81, 0);
+  color: rgb(255, 81, 0);
 }
 
 /*============= Rooms =============*/
@@ -691,7 +692,8 @@ input {
   }
 
   .price {
-    margin-top: 10px;
+    margin-top: 20px;
+    height: 130px;
   }
 
   /* Contact */
@@ -700,9 +702,9 @@ input {
     height: auto;
   }
 
-.form-control textarea {
+  .form-control textarea {
     width: 80%;
-}
+  }
 
   /* Footer */
   .copyright h5 {
@@ -802,7 +804,7 @@ input {
   }
 
   /* Contact */
-   .form-control textarea {
+  .form-control textarea {
     width: 80%;
   }
 
